# cs336-assignments

./: CLAUDE.md  README.md  main.py  pyproject.toml
src/assignment-1-basics/: .gitignore  README.md  TODO.md  bench_bpe.py  profile_bpe.py  pyproject.toml  verify_step10_mha.py  verify_step11_mha_rope.py  verify_step12_transformer_block.py  verify_step13_transformer_lm.py  verify_step14_gradient_clipping.py  verify_step15_adamw.py  verify_step16_lr_schedule.py  verify_step17_checkpoint.py  verify_step19_tokenizer.py  verify_step1_silu.py  verify_step20_train_bpe.py  verify_step2_softmax.py  verify_step3_rmsnorm.py  verify_step4_linear.py  verify_step5_embedding.py  verify_step6_cross_entropy.py  verify_step7_get_batch.py  verify_step8_attention.py  verify_step9_rope.py  verify_swiglu.py
src/assignment-1-basics/cs336_basics/: __init__.py  pretokenization_example.py
src/assignment-1-basics/tests/: __init__.py  adapters.py
src/assignment-1-basics/tests/_snapshots/: test_4d_scaled_dot_product_attention.npz  test_multihead_self_attention.npz  test_multihead_self_attention_with_rope.npz  test_rmsnorm.npz  test_rope.npz  test_scaled_dot_product_attention.npz  test_transformer_block.npz  test_transformer_lm.npz  test_transformer_lm_truncated_input.npz
